--- a/src/main/resources/fxml/PCGUI.fxml
+++ b/src/main/resources/fxml/PCGUI.fxml
@@ -185,13 +185,16 @@
                                                                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                                                </columnResizePolicy>
                                                             </TableView>
-                                                            <TableView fx:id="datasheetFileTable" editable="true" maxHeight="50.0" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#setDatasheetFile" onMousePressed="#setDatasheetFile" prefHeight="50.0" prefWidth="100.0" GridPane.hgrow="ALWAYS" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
+                                                            <TableView fx:id="datasheetFileTable" editable="true" maxHeight="50.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="100.0" GridPane.hgrow="ALWAYS" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
                                                               <columns>
                                                                 <TableColumn fx:id="datasheetFileName" prefWidth="203.0" sortable="false" text="Файл описания тоавра (PDF)" />
                                                               </columns>
                                                                <columnResizePolicy>
                                                                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                                                </columnResizePolicy>
+                                                               <contextMenu>
+                                                                  <ContextMenu fx:id="datasheetTableContextMenu" />
+                                                               </contextMenu>
                                                             </TableView>
                                                          </children>
                                                       </GridPane>
@@ -256,7 +259,7 @@
                                  <children>
                                     <AnchorPane>
                                        <children>
-                                          <Label alignment="CENTER" text="Label" textFill="#057df7" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="10.0">
+                                          <Label fx:id="productTabTitle" alignment="CENTER" text="Label" textFill="#057df7" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="10.0">
                                              <font>
                                                 <Font name="System Bold" size="24.0" />
                                              </font>
@@ -347,9 +350,19 @@
                                                                   </Label>
                                                                </children>
                                                             </AnchorPane>
-                                                            <AnchorPane VBox.vgrow="ALWAYS">
+                                                            <AnchorPane fx:id="productTabAnchorPaneImageView" VBox.vgrow="ALWAYS">
                                                                <children>
-                                                                  <ImageView fitHeight="300.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0" />
+                                                                  <GridPane fx:id="productTabGridPaneImageView" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                                    <columnConstraints>
+                                                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                                    </columnConstraints>
+                                                                    <rowConstraints>
+                                                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                                    </rowConstraints>
+                                                                     <children>
+                                                                        <ImageView fx:id="productTabImageView" fitHeight="220.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" />
+                                                                     </children>
+                                                                  </GridPane>
                                                                </children>
                                                             </AnchorPane>
                                                             <AnchorPane>
