--- a/src/main/resources/fxml/PCGUI.fxml
+++ b/src/main/resources/fxml/PCGUI.fxml
@@ -767,7 +767,7 @@
                                                                                     </AnchorPane>
                                                                                     <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                                                                                        <children>
-                                                                                          <Button fx:id="startImportXLSButton" layoutX="24.0" layoutY="4.0" mnemonicParsing="false" onAction="#startImportFromXLSToDB" text="Старт!" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                                                          <Button fx:id="startImportXLSButton" layoutX="24.0" layoutY="4.0" mnemonicParsing="false" onAction="#startImportProgressBar" text="Старт!" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                                                                        </children>
                                                                                     </AnchorPane>
                                                                                  </children>
