--- a/src/main/resources/fxml/PCGUI.fxml
+++ b/src/main/resources/fxml/PCGUI.fxml
@@ -313,7 +313,12 @@
                                                             </AnchorPane>
                                                             <AnchorPane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                                                                <children>
-                                                                  <ListView fx:id="functionsList" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0" />
+                                                                  <TableView fx:id="functionsTable1" onMouseClicked="#handleFunctionsTable1MouseClicked" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0">
+                                                                     <columns>
+                                                                        <TableColumn fx:id="functionsTableTitleColumn1" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="190.0" text="Наименование" />
+                                                                        <TableColumn fx:id="functionsTableSymbolColumn1" maxWidth="75.0" prefWidth="57.0" text="Символ" />
+                                                                     </columns>
+                                                                  </TableView>
                                                                </children>
                                                             </AnchorPane>
                                                          </children>
@@ -326,7 +331,7 @@
                                                          <children>
                                                             <AnchorPane VBox.vgrow="ALWAYS">
                                                                <children>
-                                                                  <TableView fx:id="propertiesTable" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                                  <TableView fx:id="propertiesTable" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                                     <columns>
                                                                       <TableColumn fx:id="propertyTitleColumn" prefWidth="156.0" text="Свойство" />
                                                                         <TableColumn fx:id="propertyConditionColumn" prefWidth="148.0" text="Условие" />
@@ -336,6 +341,60 @@
                                                                         <ContextMenu fx:id="propertiesTableContextMenu" />
                                                                      </contextMenu>
                                                                   </TableView>
+                                                               </children>
+                                                            </AnchorPane>
+                                                            <AnchorPane prefHeight="200.0" VBox.vgrow="ALWAYS">
+                                                               <children>
+                                                                  <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-5.0">
+                                                                    <columnConstraints>
+                                                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                                    </columnConstraints>
+                                                                    <rowConstraints>
+                                                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+                                                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                                    </rowConstraints>
+                                                                     <children>
+                                                                        <AnchorPane GridPane.vgrow="NEVER">
+                                                                           <children>
+                                                                              <Label layoutX="101.0" layoutY="26.0" text="Описание функции:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                                                 <font>
+                                                                                    <Font name="System Bold" size="14.0" />
+                                                                                 </font>
+                                                                              </Label>
+                                                                           </children>
+                                                                        </AnchorPane>
+                                                                        <AnchorPane GridPane.columnIndex="1" GridPane.vgrow="NEVER">
+                                                                           <children>
+                                                                              <Label layoutX="100.0" layoutY="26.0" text="Иллюстрация к функции:" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                                                 <font>
+                                                                                    <Font name="System Bold" size="14.0" />
+                                                                                 </font>
+                                                                              </Label>
+                                                                           </children>
+                                                                        </AnchorPane>
+                                                                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                                                           <children>
+                                                                              <TextArea fx:id="functionDescriptionTextArea" layoutX="15.0" layoutY="-66.0" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                                           </children>
+                                                                        </AnchorPane>
+                                                                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                                                           <children>
+                                                                              <GridPane fx:id="functionGridPaneImageView" layoutX="14.0" layoutY="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                                                <columnConstraints>
+                                                                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                                                </columnConstraints>
+                                                                                <rowConstraints>
+                                                                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                                                </rowConstraints>
+                                                                                 <children>
+                                                                                    <ImageView fx:id="functionImageView" fitHeight="100.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                                                                                 </children>
+                                                                              </GridPane>
+                                                                           </children>
+                                                                        </AnchorPane>
+                                                                     </children>
+                                                                  </GridPane>
                                                                </children>
                                                             </AnchorPane>
                                                          </children>
@@ -615,7 +674,10 @@
                 </Tab>
                   <Tab text="Браузер">
                     <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <WebView fx:id="tabBrowserWebView" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children></AnchorPane>
                     </content>
                   </Tab>
                   <Tab fx:id="settingsTab" text="Настройки">
@@ -850,7 +912,7 @@
                                                                                        <children>
                                                                                           <TreeTableView fx:id="propertiesTreeTable" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="0.0">
                                                                                             <columns>
-                                                                                              <TreeTableColumn fx:id="propertiesTreeTableTitleColumn" prefWidth="205.0" text="Наименование" />
+                                                                                              <TreeTableColumn fx:id="propertiesTreeTableTitleColumn" prefWidth="206.0" text="Наименование" />
                                                                                             </columns>
                                                                                           </TreeTableView>
                                                                                        </children>
@@ -872,7 +934,8 @@
                                                                                        <children>
                                                                                           <TableView fx:id="functionsTable" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                                                             <columns>
-                                                                                              <TableColumn fx:id="functionsTableTitleColumn" prefWidth="205.0" text="Наименование" />
+                                                                                              <TableColumn fx:id="functionsTableTitleColumn" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="155.0" text="Наименование" />
+                                                                                                <TableColumn fx:id="functionsTableSymbolColumn" maxWidth="75.0" prefWidth="51.0" text="Символ" />
                                                                                             </columns>
                                                                                           </TableView>
                                                                                        </children>
